--- a/thesis/sections/introduction.tex
+++ b/thesis/sections/introduction.tex
@@ -4,17 +4,26 @@
 \begin{document}
 
 \officialDemand{
-	\textbf{题目}
+	\textbf{正文}
 	\begin{officialDemandText}
-		论文题目要体现出专业特点，
-		在专业范围内选题。
-		题目应能概括整个论文最重要的内容，
-		简短、明确、有概括性；
-		字数要适当，一般不宜超过24个汉字，
-		必要时可增加副标题。
-		外文题目一般不宜超过12个实词。
+		正文是毕业论文的主体和核心部分，
+		不同学科专业和不同形式的毕业论文可以有不同的写作方式。
+		应当层次分明、数据可靠、文字简炼、说理透彻、推理严谨、立论正确。
+		正文一般包括绪论（或序言）、正文主体和结论三部分。
+		绪论部分主要论述论文的选题背景、国内外研究现状分析、研究目的和主要内容等。
+		正文主体是对研究工作的详细表述，一般由标题、文字、图、表格和公式等部分组成。
+		结论应概括说明所进行工作的情况和价值，
+		分析其优点和特色，指出创新所在，
+		并应指出其中存在的问题和今后的改进方向，
+		结论要简单、明确，篇幅不宜过长。
+		毕业论文（设计）的篇幅一般不少于8000字。
 	\end{officialDemandText}
-	本模板使用\lstinline{\\title{}}命令代表题目
+
+	\textbf{注释}
+	\begin{officialDemandText}
+		注释是对论文中所应用的名词术语的解释，
+		或是对引文出处的说明，采用脚注形式。
+	\end{officialDemandText}
 }
 
 
