--- a/thesis/sections/thanks.tex
+++ b/thesis/sections/thanks.tex
@@ -2,6 +2,18 @@
 \graphicspath{{figures/}{../figures/}}
 
 \begin{document}
+
+\officialDemand{
+  \textbf{致谢}
+  \begin{officialDemandText}
+    致谢应以简短的文字对课题研究与论文撰写过程中曾直接给予帮助的人员
+    (例如指导教师、答疑教师及其他人员)表示的谢意，
+    这不仅是一种礼貌，
+    也是对他人劳动的尊重，
+    是治学者应当遵循的学术规范。字数一般不应超过500字。
+  \end{officialDemandText}
+}
+
 感谢我的队友张探探，
 张探探对硬件的了解和学习教会我很多硬件知识，
 并直接帮助本文的写作与论述，
@@ -50,5 +62,8 @@
 贾辰凌,潘安,
 韩瑞,马晓梅%
 老师在过去给我的大学学习的支持和帮助。
+
+
+
 
 \end{document}
