--- a/thesis/sections/abstract.tex
+++ b/thesis/sections/abstract.tex
@@ -89,7 +89,7 @@
 \begin{abstract}
   \PrintChineseAbstract
 
-	\keywords{MSP430G2553 \qquad 小车 \qquad 小车控制}
+	\keywords{MSP430G2553; \qquad 小车; \qquad 小车控制}
 \end{abstract}
 % \newpage
 \selectlanguage{english}
@@ -98,8 +98,21 @@
 \end{center}
 \begin{abstract}
 	\PrintenglishAbstract
-	\keywords{MSP430G2553, \qquad obstacle car, \qquad control car}
+	\keywords{MSP430G2553, \quad obstacle car, \quad control car}
 \end{abstract}
 \selectlanguage{pinyin}
+
+\officialDemand{
+  \textbf{目录格式要求}
+  \begin{officialDemandText}
+    中文目录应放在奇数页上起排。
+
+    “目录”两字用三号黑体，两字间距两个字符，
+    居中，段前空1行，段后空1行，20磅。
+
+    目录正文采用Word软件的目录自动生成功能生成目录，
+    小四号宋体。不需出现图、表目录。
+  \end{officialDemandText}
+}
 
 \end{document}
