--- a/thesis/sections/cover.tex
+++ b/thesis/sections/cover.tex
@@ -27,7 +27,7 @@
     \zihao{-0}{\MyProject}
     \vskip 2cm
     {
-      \zihao{3} \heiti\textbf{题目: \hspace{0.2cm}\coverunderline[12.5cm]{\MyTitle}}
+      \zihao{3} \heiti\textbf{论文题目: \hspace{0.2cm}\coverunderline[12.5cm]{\MyTitle}}
     }
     \vskip 2cm
     {
@@ -49,22 +49,7 @@
     }
   \end{center}
 \end{titlepage}
-\officialDemand{
-  这是毕业论文相关的提示框，
-  只在草稿状态下显示。
-  
-	\textbf{题目}
-	\begin{officialDemandText}
-		论文题目要体现出专业特点，
-		在专业范围内选题。
-		题目应能概括整个论文最重要的内容，
-		简短、明确、有概括性；
-		字数要适当，一般不宜超过24个汉字，
-		必要时可增加副标题。
-		外文题目一般不宜超过12个实词。
-	\end{officialDemandText}
-	本模板使用\lstinline{\\title{}}命令代表题目
-}
+
 % \fSong \normalsize
 
 % \endinput
