--- a/thesis/sections/thanks.tex
+++ b/thesis/sections/thanks.tex
@@ -12,6 +12,15 @@
     也是对他人劳动的尊重，
     是治学者应当遵循的学术规范。字数一般不应超过500字。
   \end{officialDemandText}
+  \begin{officialDemandText}
+    致谢另起一页编排。
+    “致谢”二字居中，
+    用三号黑体，
+    字间空一格，
+    上下各空一行。
+    “致谢”二字下空一行打印内容，
+    用小四号宋体。
+  \end{officialDemandText}
 }
 
 感谢我的队友张探探，
