--- a/thesis/sections/abstract.tex
+++ b/thesis/sections/abstract.tex
@@ -89,7 +89,7 @@
 \begin{abstract}
   \PrintChineseAbstract
 
-	\keywords{MSP430G2553; \qquad 小车; \qquad 小车控制}
+	\keywords{MSP430G2553；小车； 小车控制}
 \end{abstract}
 % \newpage
 \selectlanguage{english}
@@ -98,7 +98,7 @@
 \end{center}
 \begin{abstract}
 	\PrintenglishAbstract
-	\keywords{MSP430G2553, \quad obstacle car, \quad control car}
+	\keywords{MSP430G2553,obstacle car, control car}
 \end{abstract}
 \selectlanguage{pinyin}
 
