--- a/thesis/sections/statement.tex
+++ b/thesis/sections/statement.tex
@@ -22,10 +22,10 @@
 \vspace{3cm}
 
 \begin{flushright}
-  毕业论文签名: \qquad \\
-  专业：\qquad \qquad \quad \\
-  学号：\qquad \qquad \quad \\
-  \qquad 年 \quad 月 \quad 日
+  毕业论文签名: \hphantom{陈伯硕,,,,00}\\
+  专业：\hphantom{计算机科学与技术} \\
+  \,学号：\hphantom{1831050010000000} \\
+  \qquad 年 \quad 月 \quad 日 \hphantom{0000}
 \end{flushright}
 
 \officialDemand{
@@ -34,13 +34,13 @@
 		独创性及知识产权声明用以表明作者对于论文成果的独立研究及对论文知识产权的确认。
 		每份论文的独创性及知识产权声明必须有作者的亲笔签名（或印章）和签名日期。
 	\end{officialDemandText}
-  \begin{officialDemandText}    
+  \begin{officialDemandText}
     “西安财经大学本科毕业论文（设计）独创性及知识产权声明”用二号号宋体加粗居中，题
     前空三行，
     题后空二行打印内容，
     用小四号宋体。
     具体样式见模版。
-  \end{officialDemandText}    
+  \end{officialDemandText}
 }
 
 \newpage
