--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -3,15 +3,7 @@
 % \documentclass[draft,ebook]{XaufeThesisTemplate}
 %%%%%%%%%%%%%%
 
-\project{本科毕业设计}
-\title{模板测试}
-\englishTitle{Template testing}
-\author{陈伯硕}
-\date{\today}
-\studnetId{1831050010} % 学号
-\major{计算机科学与技术} % 专业
-\class{计本1801} % 班级
-\teacher{魏晋雁} % 指导老师
+\input{information.tex}
 
 \usepackage{subfiles}
 \begin{document}
@@ -48,7 +40,7 @@
 }{}
 
 	\pagebreak
-\bibliography{reference/reference}
+\bibliography{reference/*}
 \nocite{*}
 
 \pagebreak
