:art: 删除一些无用代码，美化代码结构

--- a/thesis/open_report.tex
+++ b/thesis/open_report.tex
@@ -11,17 +11,12 @@
 \input{sections/open_report/cover}
 \input{sections/open_report/requirements}
 
-% \begin{threeparttable}
+% 表格正文
 \begin{longtable}{|p{\textwidth}|}
   \hline
   \endfoot
   \hline
   \endhead
-  % \caption{My data}
-  % \label{tab:table3}\\
-  % \hline
-  % \textbf{Name} \\
-  % \hline
   \section{选题背景和意义}
   \\ \hline
   \section{研究基础和主要参考文献}
@@ -31,56 +26,19 @@
       \nocite{*}
   \\ \hline
   \section{主要研究内容}
-  
+
   \\ \hline
   \section{拟采取的研究方法和技术路线}
   \\ \hline
   \section{研究计划及进度安排}
   \\ \hline
-  指导教师意见:
-    \vspace{4cm}
-    \begin{flushright}
-      指导教师（签名）：
-      \coverunderline[3cm]{}
-      \qquad \qquad 
-
-      年 \quad 月 \quad 日
-    \end{flushright}
-    \vspace{2cm}
-  \\ \hline
-  学部（系、所）意见：
-    \vspace{2cm}
-    \begin{flushright}
-      负责人（签名）：
-      \coverunderline[3cm]{}
-      \qquad \qquad 
-
-      年 \quad 月 \quad 日
-    \end{flushright}
-    \vspace{2cm}
-  \\ \hline
-  二级学院意见：
-    \vspace{2cm}
-    \begin{flushright}
-      负责人（签名）：
-      \coverunderline[3cm]{}
-      \qquad \qquad
-
-      年 \quad 月 \quad 日
-    \end{flushright}
-    \vspace{2cm}
-  \\ \hline
-
-
+  \input{sections/open_report/signature}
 \end{longtable}
 \vspace{-0.5cm}
 \begin{tablenotes}
-  \item \rightline{\rm{ 
+  \item \rightline{\rm{
     教务处制表
   }}
 \end{tablenotes}
-% \end{threeparttable}
-  % \footnotesize{$^a$ The smallest spatial unit is county, $^b$ more details in appendix A}\\
-
 
 \end{document}
