--- a/thesis/open_report.tex
+++ b/thesis/open_report.tex
@@ -1,9 +1,4 @@
-\documentclass{XaufeThesisTemplate}
-% \documentclass[draft]{XaufeThesisTemplate}
-% \documentclass[draft,ebook]{XaufeThesisTemplate}
-%%%%%%%%%%%%%%
-
-\importOpenReportSetting
+\documentclass[openReport]{XaufeThesisTemplate}
 
 \begin{document}
 
