--- a/thesis/open_report.tex
+++ b/thesis/open_report.tex
@@ -7,33 +7,25 @@
 \input{sections/open_report/requirements}
 
 % 表格正文
-\begin{longtable}{|p{\textwidth}|}
-  \hline
-  \endfoot
-  \hline
-  \endhead
+\begin{sectionCell}
   \section{选题背景和意义}
-  \\ \hline
+\end{sectionCell}
+\begin{sectionCell}
   \section{研究基础和主要参考文献}
     \subsection{研究基础}
     \subsection{参考文献}
       \bibliography{reference/reference}
       \nocite{*}
-  \\ \hline
+\end{sectionCell}
+\begin{sectionCell}
   \section{主要研究内容}
-
-  \\ \hline
+\end{sectionCell}
+\begin{sectionCell}
   \section{拟采取的研究方法和技术路线}
-  \\ \hline
+\end{sectionCell}
+\begin{sectionCell}
   \section{研究计划及进度安排}
-  \\ \hline
-  \input{sections/open_report/signature}
-\end{longtable}
-\vspace{-0.5cm}
-\begin{tablenotes}
-  \item \rightline{\rm{
-    教务处制表
-  }}
-\end{tablenotes}
+\end{sectionCell}
+\input{sections/open_report/signature}
 
 \end{document}
