--- a/thesis/sections/open_report/signature.tex
+++ b/thesis/sections/open_report/signature.tex
@@ -1,33 +1,43 @@
-指导教师意见:
-  \vspace{4cm}
-  \begin{flushright}
-    指导教师（签名）：
-    \coverunderline[3cm]{}
-    \qquad \qquad
-
-    年 \quad 月 \quad 日
-  \end{flushright}
-  \vspace{2cm}
-\\ \hline
-学部（系、所）意见：
-  \vspace{2cm}
-  \begin{flushright}
-    负责人（签名）：
-    \coverunderline[3cm]{}
-    \qquad \qquad
-
-    年 \quad 月 \quad 日
-  \end{flushright}
-  \vspace{2cm}
-\\ \hline
-二级学院意见：
-  \vspace{2cm}
-  \begin{flushright}
-    负责人（签名）：
-    \coverunderline[3cm]{}
-    \qquad \qquad
-
-    年 \quad 月 \quad 日
-  \end{flushright}
-  \vspace{2cm}
+\begin{sectionCell}
+  指导教师意见:
+    \vspace{4cm}
+    \begin{flushright}
+      指导教师（签名）：
+      \coverunderline[3cm]{}
+      \qquad \qquad
+  
+      年 \quad 月 \quad 日
+    \end{flushright}
+    \vspace{2cm}
+\end{sectionCell}
+\begin{sectionCell}
+  学部（系、所）意见：
+    \vspace{2cm}
+    \begin{flushright}
+      负责人（签名）：
+      \coverunderline[3cm]{}
+      \qquad \qquad
+  
+      年 \quad 月 \quad 日
+    \end{flushright}
+    \vspace{2cm}
+\end{sectionCell}
+\begin{sectionCell}
+  二级学院意见：
+    \vspace{2cm}
+    \begin{flushright}
+      负责人（签名）：
+      \coverunderline[3cm]{}
+      \qquad \qquad
+  
+      年 \quad 月 \quad 日
+    \end{flushright}
+    \vspace{2cm}
+\end{sectionCell}
+\begin{tablenotes}
+  \item \rightline{\rm{
+    教务处制表
+  }}
+\end{tablenotes}
+% \\ \hline
 % \\ \hline
