--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -56,4 +56,10 @@
 \thanksSection
 	\subfile{sections/thanks}
 
+\ifdraft{
+	\logItem{2022-04-05}{如果涉及实验实验可以用\lstinline{\\logItem{时间}{关键词}}}
+		\begin{itemize}
+			\item 现象；
+		\end{itemize}
+}{}
 \end{document}
